<resources>
    <string name="app_name">Dataproperti</string>
    <!-- Strings related to login -->
    <string name="appWelcome">Welcome to Data Properti</string>
    <string name="appIconDesc">Data Properti Icon</string>
    <string name="signIn">Sign In</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="signupBtn">Sign Up</string>
    <string name="loginBtn">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>

    <string name="confirmation_password">Confirmation Password</string>
    <string name="reset">Reset</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="title_home">Home</string>
    <string name="foto_depan">Foto Depan</string>
    <string name="foto_jalan">Foto Jalan</string>
    <string name="foto_dalam">Foto Dalam</string>
    <string name="foto_dijual">Foto Dijual</string>
    <string name="lainnya">Lainnya</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="informasi_lokasi">Informasi Lokasi</string>
    <string name="alamat">Alamat</string>
    <string name="desa">Desa</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="informasi_jual_amp_sewa"><![CDATA[Informasi Jual & Sewa]]></string>
    <string name="pilih_properti">Pilih Properti</string>
    <string name="kondisi_penawaran">Kondisi Penawaran</string>
    <string name="harga_penawaran">Harga Penawaran</string>
    <string name="mulai_ditawarkan">Mulai Ditawarkan</string>
    <string name="nama_sumber_data">Nama Sumber Data</string>
    <string name="telepon">Telepon</string>
    <string name="informasi_properti">Informasi Properti</string>
    <string name="a_tanah">A.Tanah</string>
    <string name="jenis_perkerasan_jalan">Jenis Perkerasan Jalan</string>
    <string name="kondisi_jalan">Kondisi Jalan</string>
    <string name="lingkungan_sekitar">Lingkungan Sekitar</string>
    <string name="bentuk_tapak_tanah">Bentuk Tapak Tanah</string>
    <string name="luas_tanah">Luas Tanah</string>
    <string name="legalitas_dokumen_tanah">Legalitas Dokumen Tanah</string>
    <string name="b_bangunan">B.Bangunan</string>
    <string name="tipe_bangunan">Tipe Bangunan</string>
    <string name="jumlah_lantai">Jumlah Lantai</string>
    <string name="fungsi_bangunan">Fungsi Bangunan</string>
    <string name="luas_bangunan">Luas Bangunan</string>
    <string name="tahun_di_bangun">Tahun di Bangun</string>
    <string name="legalitas_bangunan_imb">Legalitas Bangunan / IMB</string>
    <string name="tahun_renovasi">Tahun Renovasi</string>
    <string name="c_spesifikasi_bangunan">C. Spesifikasi Bangunan</string>
    <string name="pondasi">Pondasi</string>
    <string name="struktur">Struktur</string>
    <string name="rangka_atap">Rangka Atap</string>
    <string name="plafon">Plafon</string>
    <string name="dinding">Dinding</string>
    <string name="pintu_amp_jendela"><![CDATA[Pintu & Jendela]]></string>
    <string name="lantai">Lantai</string>
    <string name="kapasitas_listrik">Kapasitas Listrik</string>
    <string name="sumber_air_bersih">Sumber Air Bersih</string>
    <string name="telephone">Telephone</string>
    <string name="air_conditioning_ac">Air Conditioning / AC</string>
    <string name="penutup_atap">Penutup Atap</string>
    <string name="d_sarana_pelengkap">D.Sarana Pelengkap</string>
    <string name="pagar">Pagar</string>
    <string name="perkerasan">Perkerasan</string>
    <string name="kanopi">Kanopi</string>
    <string name="keterangan_lainnya">Keterangan Lainnya</string>
    <string name="e_keterangan_lainnya">E.Keterangan Lainnya</string>
    <string name="jarak_dinding_terluar_ke_jalan">Jarak Dinding Terluar ke Jalan</string>
    <string name="letak_posisi_tanah">Letak Posisi Tanah</string>
    <string name="lebar_depan_muka">Lebar Depan Muka</string>
    <string name="jenis_tanah">Jenis Tanah</string>
    <string name="topografi_kontur_tanah">Topografi Kontur Tanah</string>
    <string name="tinggi_permukaan_tanah_terhadap_jalan">Tinggi Permukaan Tanah Terhadap Jalan</string>
    <string name="lebar_jalan_depan">Lebar Jalan Depan</string>
    <string name="title_profile">Profile</string>
    <string name="add_properti">Add Properti</string>
    <string name="jenisprop">JenisProp</string>
    <string name="koordinat">Koordinat</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
</resources>