<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="20dp"
    android:backgroundTint="#FAFAFA"
    android:layout_marginTop="18dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp">

    <TextView
        android:id="@+id/options"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="&#8942;"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_emp"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alamat_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:fontFamily="@font/montserrat_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/alamat"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/koordinat_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/koordinat"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/jenisprop_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/jenisprop"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>